Caching HW 1.2.4 Get post
